--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,7 @@
   "plugins": ["jsx-a11y"],
   "extends": 
   ["next/core-web-vitals",
-  "plugin:jsx-a11y/recommended"]
+  "plugin:jsx-a11y/recommended",
+  "next", 
+  "prettier"]
 }
