--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "next": "14.0.1",
@@ -17,6 +19,8 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "prettier": "3.2.5"
   }
 }
