--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.1",
     "node": "^18.14.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
